package com.zhaoyan.juyou;

option java_package = "com.zhaoyan.communication.protocol.pb";
option java_outer_classname = "PBLogoutProtos";
message PBLogoutClient {
	required int32 userId = 1;
}

message PBLogoutServer {
	required int32 userId = 1;
}